[gd_scene load_steps=6 format=3 uid="uid://cc73s84erwdak"]

[ext_resource type="Theme" uid="uid://cf2uo2q4htym5" path="res://prefabs/RhythmGame/rhythm_theme.tres" id="1_pu846"]
[ext_resource type="Script" path="res://prefabs/RhythmGame/rhythm_game.gd" id="1_uc616"]
[ext_resource type="AudioStream" uid="uid://bhp2y1uhikpjf" path="res://assets/sounds/Bears (Reconstruction).mp3" id="2_fql7n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2ebt"]
size = Vector2(30, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2vcg"]
size = Vector2(10, 100)

[node name="RhythmGame" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pu846")
script = ExtResource("1_uc616")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Tap to the beat!"
horizontal_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
layout_mode = 2

[node name="GameBar" type="Panel" parent="VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.0
offset_top = 50.0
offset_right = 298.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClickArea" type="ColorRect" parent="VBoxContainer/NinePatchRect/GameBar"]
layout_mode = 0
offset_left = 125.0
offset_top = 5.0
offset_right = 155.0
offset_bottom = 95.0
color = Color(0.427451, 1, 0.533333, 0.823529)

[node name="ClickArea2D" type="Area2D" parent="VBoxContainer/NinePatchRect/GameBar/ClickArea"]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/NinePatchRect/GameBar/ClickArea/ClickArea2D"]
position = Vector2(15, 45.5)
shape = SubResource("RectangleShape2D_w2ebt")

[node name="DeadArea" type="ColorRect" parent="VBoxContainer/NinePatchRect/GameBar"]
layout_mode = 0
offset_left = 5.5
offset_top = 2.0
offset_right = 15.5
offset_bottom = 99.0
color = Color(0, 0, 0, 1)

[node name="DeadArea2D" type="Area2D" parent="VBoxContainer/NinePatchRect/GameBar/DeadArea"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/NinePatchRect/GameBar/DeadArea/DeadArea2D"]
position = Vector2(5, 50)
shape = SubResource("RectangleShape2D_p2vcg")

[node name="ButtonSpawner" type="Node2D" parent="VBoxContainer/NinePatchRect/GameBar"]
position = Vector2(600, 50)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 3.2
one_shot = true

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fql7n")

[connection signal="area_entered" from="VBoxContainer/NinePatchRect/GameBar/ClickArea/ClickArea2D" to="." method="_on_click_area_2d_area_entered"]
[connection signal="area_exited" from="VBoxContainer/NinePatchRect/GameBar/ClickArea/ClickArea2D" to="." method="_on_click_area_2d_area_exited"]
[connection signal="area_entered" from="VBoxContainer/NinePatchRect/GameBar/DeadArea/DeadArea2D" to="." method="_on_dead_area_2d_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="IntroTimer" to="." method="_on_intro_timer_timeout"]
